--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=8080
-server.error.include-message=always
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+# ? jdbc-url ???????, ??? ?????? ????? ????????? ? ????
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=alex
+spring.datasource.password=password
